Добавление стилей и js

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <header th:fragment="header">
     <div class="header">
         <a href="/"><div class='logo'>
-            <img src="<?= $themePath ?>/img/logo.png">
+            <!--<img src="<?= $themePath ?>/img/logo.png">-->
             <div>
                 <p>Дополнительное профессиональное образование</p>
                 <p>Московский Политех</p>
