--- a/src/main/resources/templates/admin/fragments/adminLayout.html
+++ b/src/main/resources/templates/admin/fragments/adminLayout.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html th:fragment="adminLayout (template, menu)">
+<html th:fragment="adminLayout (template, page)">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--        <link href="<?= $themePath ?>/css/index.css" rel="stylesheet">
-        <link href="<?= $themePath ?>/css/footer.css" rel="stylesheet">
-        <link href="<?= $themePath ?>/css/totopbutton.css" rel="stylesheet">
-        <link rel="stylesheet" href="<?= $themePath ?>/css/pushy.css">
-        <link rel="shortcut icon" href="<?= $themePath ?>/img/icon.ico" type="image/x-icon">
+        
+        <link rel="shortcut icon" th:href="@{/resources/image/icons/icon.ico}" type="image/x-icon">
 
-         Bootstrap 
-        <link rel="stylesheet" href="<?= $themePath ?>/css/bootstrap/bootstrap.min.css">
-        <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>-->
-
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/simple-line-icons/2.4.1/css/simple-line-icons.css}"/>
+        <link rel="stylesheet" th:href="@{/resources/css/admin/dashboard.css}">
+        
+        <th:block th:insert="~{admin/fragments/adminCss :: adminCss}"></th:block>
+        
         <title th:text="admin"></title>
     </head>
 
@@ -22,7 +21,11 @@
     <header th:replace="~{admin/fragments/adminHeader :: adminHeader}" />
     
     <main th:replace="${template}" />  
-
+    
+    <script th:src="@{/webjars/tether/1.4.0/dist/js/tether.min.js}"></script>
+    <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
+    <th:block th:insert="~{/admin/fragments/adminJs :: adminJs}"></th:block>
 </body>
 
 </html>
