--- a/src/main/resources/templates/admin/courses/createOrUpdateCourse.html
+++ b/src/main/resources/templates/admin/courses/createOrUpdateCourse.html
@@ -2,36 +2,51 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" 
       th:replace="~{admin/fragments/adminLayout :: adminLayout (~{::main},'createOrUpdateCourse')}">
     
-<main>
-    <form  th:object="${course}" th:action="@{/admin/courses/createOrUpdate}"  method="post">
-        <input type="hidden" th:field="*{id}"/>
+<main class="container-fluid" >
+    <div class="row">
+        <div class="col-md-9 col-md-offset-3">
+            <form  th:object="${course}" th:action="@{/admin/courses/createOrUpdate}"  method="post">
+                <input type="hidden" th:field="*{id}"/>
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Url курса', 'urlSegment', 'text')}" />
 
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Url курса', 'urlSegment', 'text')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Название курса', 'title', 'text')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Аудитория курса(для кого предназначена программа)', 'courseAudience', 'textarea')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Чему обучают на курсе', 'courseSubject', 'textarea')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Цена курса', 'coursePrice', 'number')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Длительность курса', 'courseTime', 'number')}" />
-        
-        <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Выдаваемый документ курса', 'courseDocument', 'text')}" />
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Название курса', 'title', 'text')}" />
 
-        <td th:text="'Статус курса'" class="col-2"></td>
-        
-        <div class="col-sm-offset-2 col-sm-10">
-            <button
-              th:with="text=*{id} ? 'Обновить курс' : 'Добавить курс'"
-              class="btn btn-primary" type="submit" th:text="${text}"></button>
-            
-            <a th:if="*{id}" id="deleteCourse" class="btn btn-danger" th:text="'Удалить курс'" 
-                    th:href="@{/admin/courses/delete/} + *{id}"></a>
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Аудитория курса(для кого предназначена программа)', 'courseAudience', 'textarea')}" />
+
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Чему обучают на курсе', 'courseSubject', 'textarea')}" />
+
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Цель программы', 'courseGoal', 'textarea')}" />
+
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Цена курса', 'coursePrice', 'number')}" />
+
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Длительность курса', 'courseTime', 'number')}" />
+                    <input th:replace="~{admin/fragments/adminInputField :: adminInput ('Выдаваемый документ курса', 'courseDocument', 'text')}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Выберите форму обучения', 'courseForm', ${T(ru.mospolytech.dpo.domain.enumeration.CourseForm).values()})}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Выберите сферу обучения', 'courseField', ${T(ru.mospolytech.dpo.domain.enumeration.CourseField).values()})}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Выберите вид обучения', 'courseType', ${T(ru.mospolytech.dpo.domain.enumeration.CourseType).values()})}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Выберите формируемые компетенции', 'courseCompetency', ${T(ru.mospolytech.dpo.domain.enumeration.CourseCompetency).values()})}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Выберите площадку', 'courseStudyLocation', ${T(ru.mospolytech.dpo.domain.enumeration.CourseStudyLocation).values()})}" />
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Укажите, для кого предназначена программа', 'courseTargetEntity', ${T(ru.mospolytech.dpo.domain.enumeration.CourseTargetEntity).values()})}" />    
+
+                    <select th:replace="~{admin/fragments/adminSelectField :: adminSelect ('Статус курса', 'courseStatus', ${T(ru.mospolytech..dpo.domain.enumeration.CourseStatus).values()})}" />
+
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button
+                          th:with="text=*{id} ? 'Обновить курс' : 'Добавить курс'"
+                          class="btn btn-primary" type="submit" th:text="${text}"></button>
+
+                        <a th:if="*{id}" id="deleteCourse" class="btn btn-danger" th:text="'Удалить курс'" 
+                                th:href="@{/admin/courses/delete/} + *{id}"></a>
+                    </div>
+            </form>
         </div>
-
-    </form>
+    </div>
 </main>
 
 </html>
