--- a/src/main/resources/templates/admin/fragments/adminCss.html
+++ b/src/main/resources/templates/admin/fragments/adminCss.html
@@ -1,4 +1,6 @@
 <th:block th:fragment="adminCss"><th:block th:switch="${page}">
         <!--<th:block th:case="courses"><link th:href="@{/resources/css/admin/courses.css}" rel="stylesheet"></th:block>-->
-        <th:block th:case="createOrUpdateCourse"><link th:href="@{/resources/css/admin/courses.css}" rel="stylesheet"></th:block>
+        <th:block th:case="updateCourse"><link th:href="@{/resources/css/admin/courses.css}" rel="stylesheet">
+            <link th:href="@{/webjars/croppie/2.6.3/croppie.css}" rel="stylesheet">
+        </th:block>
 </th:block></th:block>
