--- a/src/main/resources/templates/admin/fragments/adminUrlInputField.html
+++ b/src/main/resources/templates/admin/fragments/adminUrlInputField.html
@@ -3,7 +3,7 @@
         <label class="control-label" th:text="${label}" th:for="${name}">Label</label>
         <div class="row">
             <span class="col-sm-auto col-form-label col-form-label-sm">/[[${page}]]/</span>
-            <input th:class="${'form-control ' + name}" type="text" th:field="*{__${name}__}" />
+            <input th:class="${'form-control form-control-sm inline ' + name}" type="text" th:field="*{__${name}__}" />
         </div>
     </div>
 
