--- a/src/main/resources/templates/admin/fragments/adminInputField.html
+++ b/src/main/resources/templates/admin/fragments/adminInputField.html
@@ -4,6 +4,7 @@
         <th:block th:switch="${type}">
             <input th:case="'text'" th:class="${'form-control ' + name}" type="text" th:field="*{__${name}__}" />
             <input th:case="'number'" th:class="${'form-control ' + name}" type="number" th:field="*{__${name}__}" />
+            <input th:case="'date'" class="form-control" type="date" th:field="*{__${name}__}"/>
             <textarea th:case="'textarea'" th:class="${'form-control ' + name}" th:field="*{__${name}__}" />
         </th:block>
     </div>
