--- a/src/main/resources/templates/admin/fragments/adminCss.html
+++ b/src/main/resources/templates/admin/fragments/adminCss.html
@@ -12,4 +12,7 @@
             <link th:href="@{/webjars/croppie/2.6.3/croppie.css}" rel="stylesheet">
             <link th:href="@{/resources/css/admin/courses.css}" rel="stylesheet">
         </th:block>
+        <th:block th:case="updateContact">
+            <link th:href="@{/webjars/croppie/2.6.3/croppie.css}" rel="stylesheet">
+        </th:block>
 </th:block></th:block>
